chore: add jupyter config, add metals, add plugins, add toree magics